Fix text sitting too high since switch to DIN
I just figured this out: text was sitting too high on the line when the text
was uppercase. DIN’s uppercase letters *are* high — the lowercase ones are
perfect. The fix: Switch to lowercase, small caps when @font-face support
is detected.

--- a/server/static/common/style.less
+++ b/server/static/common/style.less
@@ -255,6 +255,11 @@ ul.inlineList{
 #account>a{
 	text-transform: uppercase;
 }
+html.fontface #account>a{
+	text-transform: lowercase;
+	font-variant: small-caps;
+	font-size: 1.5em;
+}
 #account:hover>a{
 	color: #EEE;
 }
@@ -581,8 +586,16 @@ th.descending #freshHead, th.ascending #freshHead{
 	font-weight: 200;
 	font-size: 0.8em;
 	line-height: 3em;
-	padding: 0 0 0 0.8em;
+	padding: 0 0 0 7px;
 	text-transform: uppercase;
+}
+html.fontface{
+	#musicTableHead th, #subscriptions th{
+		text-transform: lowercase;
+		font-variant: small-caps;
+		font-size: 1.2em;
+		line-height: 28px;
+	}
 }
 #musicTableBodyContainer, #subscriptionsTableBodyContainer{
 	overflow-y: auto;
